--- a/_layouts/bibtemplate.html
+++ b/_layouts/bibtemplate.html
@@ -23,7 +23,7 @@ pre{
 
 
 <div class="text-justify">
-{{reference | replace_first: 'Bryngelson, S. H.', '<b>Bryngelson, S. H.</b>' | replace_first: 'Bryngelson, S.', '<b>Bryngelson, S.</b>' | replace_first: 'Bryngelson SH', '<b>Bryngelson SH</b>' | replace_first: 'Bryngelson S', '<b>Bryngelson S</b>'}}</div>
+{{reference | replace_first: 'Lunardi, R. C.', '<b>Lunardi, R. C.</b>' | replace_first: 'Lunardi, R.', '<b>Lunardi, R.</b>' | replace_first: 'Lunardi, RC', '<b>Lunardi, RC</b>' | replace_first: 'Lunardi, R', '<b>Lunardi, R.</b>'}}</div>
 
 {% assign bibtest = false %}
 {% if entry.file %}
