trying to solve some issues

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -59,7 +59,7 @@
 </div>
 
 <div style="margin-bottom: 19px; ">
-  <a class="twitter-timeline" data-height="470" data-theme="dark" href="https://twitter.com/bazilinskyy?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-height="470" data-theme="dark" href="https://twitter.com/robenlunardi?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 
 {% if site.data.events %}
